Import of KWILLIAMS/Module-Build-0.2805_01 from CPAN.
gitpan-cpan-distribution: Module-Build
gitpan-cpan-version:      0.2805_01
gitpan-cpan-path:         KWILLIAMS/Module-Build-0.2805_01.tar.gz
gitpan-cpan-author:       KWILLIAMS
gitpan-cpan-maturity:     developer

--- a/Changes
+++ b/Changes
@@ -1,5 +1,35 @@
 Revision history for Perl extension Module::Build.
 
+0.2805_01  Thu Sep  7 21:57:29 CDT 2006
+
+ - Because of a weird behavior of YAML::Node, any distribution that
+   used version.pm objects to define their versions was generating the
+   wrong syntax for the versions in their META.yml file.  They will
+   now appear as strings like v3.42.1 or similar, including the
+   leading v.
+
+ - Upgraded to version 0.67 of version.pm. [John Peacock]
+
+ - Added a contrib/ directory with a bash completion function for M::B
+   actions and switches. [Julian Mehnle]
+
+ - When we eval() the embedded version.pm code we will now die() if
+   the eval() was unsuccessful, rather than continuing blindly on and
+   dying mysteriously later.
+
+ - Added a 'retest' action that lets users run the current regression
+   tests on a previously-installed version of a distribution.
+
+ * Instead of storing an entire dump of the Config.pm hash in the
+   _build/ directory upon startup, we now just store any overrides the
+   user or author has specified.  Note that if you were doing anything
+   you weren't supposed to be doing, like poking around in the
+   internals of $buld->{config}, your code might break, so I've put
+   the asterisk of incompatibility on this one just to cover my
+   tuchus.  [Idea originally by Randy Sims]
+
+ - Made copying files via copy_if_modified() a little less chatty.
+
 0.2805  Sat Jul 29 22:01:24 CDT 2006
 
  - We now embed a copy of version.pm right in the
