--- a/README
+++ b/README
@@ -359,6 +359,16 @@ ACTIONS
         `realclean' action, you are essentially starting over, so you will
         have to re-create the `Build' script again.
 
+    retest
+        [version 0.2806]
+
+        This is just like the `test' action, but doesn't actually build the
+        distribution first, and doesn't add blib/ to the load path, and
+        therefore will test against a *previously* installed version of the
+        distribution. This can be used to verify that a certain installed
+        distribution still works, or to see whether newer versions of a
+        distribution still pass the old regression tests, and so on.
+
     skipcheck
         [version 0.05]
 
