--- a/README
+++ b/README
@@ -202,7 +202,7 @@ ACTIONS
         warning will be issued.
 
         The current version of the META.yml specification can be found at
-        http://module-build.sourceforge.net/META-spec-v1.2.html
+        http://module-build.sourceforge.net/META-spec-current.html
 
     distsign
         [version 0.16]
@@ -310,6 +310,14 @@ ACTIONS
         also supply or override install paths by specifying there values on
         the command line with the `bindoc' and `libdoc' installation
         targets.
+
+    pardist
+        [version 0.2806]
+
+        Generates a PAR binary distribution for use with PAR or PAR::Dist.
+
+        It requires that the PAR::Dist module (version 0.17 and up) is
+        installed on your system.
 
     ppd [version 0.20]
 
@@ -658,10 +666,9 @@ INSTALL PATHS
           libhtml => /home/ken/html
 
         Note that this is *different* from how MakeMaker's `PREFIX'
-        parameter works. See "Why PREFIX is not recommended" for more
-        details. `install_base' just gives you a default layout under the
-        directory you specify, which may have little to do with the
-        `installdirs=site' layout.
+        parameter works. `install_base' just gives you a default layout
+        under the directory you specify, which may have little to do with
+        the `installdirs=site' layout.
 
         The exact layout under the directory you specify may vary by system
         - we try to do the "sensible" thing on each platform.
@@ -775,17 +782,17 @@ AUTHOR
     repository at <https://svn.perl.org/modules/Module-Build/trunk/>
 
 COPYRIGHT
-    Copyright (c) 2001-2005 Ken Williams. All rights reserved.
+    Copyright (c) 2001-2006 Ken Williams. All rights reserved.
 
     This library is free software; you can redistribute it and/or modify it
     under the same terms as Perl itself.
 
 SEE ALSO
-    perl(1), Module::Build::Cookbook(3), Module::Build::Authoring(3),
-    Module::Build::API(3), ExtUtils::MakeMaker(3), YAML(3)
+    perl(1), Module::Build::Cookbook, Module::Build::Authoring,
+    Module::Build::API, ExtUtils::MakeMaker, YAML
 
     META.yml Specification:
-    http://module-build.sourceforge.net/META-spec-v1.2.html
+    http://module-build.sourceforge.net/META-spec-current.html
 
     http://www.dsmit.com/cons/
 
