--- a/README
+++ b/README
@@ -341,6 +341,14 @@ ACTIONS
         output, so you can supply `tar' and/or `gzip' parameters to affect
         the result.
 
+    prereq_data
+        [version 0.32]
+
+        This action prints out a Perl data structure of all prerequsites and
+        the versions required. The output can be loaded again using
+        `eval()'. This can be useful for external tools that wish to query a
+        Build script for prerequisites.
+
     prereq_report
         [version 0.28]
 
