--- a/Changes
+++ b/Changes
@@ -1,5 +1,23 @@
 Revision history for Perl extension Module::Build.
 
+0.32_01 - Tue Apr 14 17:14:22 PDT 2009
+
+ Bug-fixes:
+ - Module::Build::Compat had stopped adding "PL_FILES => {}" when no
+   PL_files property was set in Build.PL; restored old behavior and fixed
+   tests and documentation related to this issue [David Golden]
+ - Caches ExtUtils::CBuilder object in a temporary stash instead of properties 
+ - Fixed undef resources->license in META.yml (RT #44453).
+ - Use $^X instead of 'perl' in t/ext.t [David Golden] (RT #43485)
+
+ Other:
+ - Generated META.yml will indicate version 1.4 of the specification
+   (RT #37478) [patch from Alexandr Ciornii]
+ - Archive::Tar now the default for generating tarballs on all platforms
+   (avoids problems with incompatible tar binaries)
+ - dist_dir() now uses dist_name() and dist_version() accessors rather
+   than using its properties directly. [brian d foy] (RT #45038)
+   
 0.32 - Wed Feb 25 17:40:02 PST 2009
 
  No changes since 0.31_04.
