--- a/README
+++ b/README
@@ -156,10 +156,9 @@ ACTIONS
         will create a tarball of the files listed in MANIFEST and compress
         the tarball using GZIP compression.
 
-        By default, this action will use the external `tar' and `gzip'
-        executables on Unix-like platforms, and the `Archive::Tar' module
-        elsewhere. However, you can force it to use whatever executable you
-        want by supplying an explicit `tar' (and optional `gzip') parameter:
+        By default, this action will use the `Archive::Tar' module. However,
+        you can force it to use binary "tar" and "gzip" executables by
+        supplying an explicit `tar' (and optional `gzip') parameter:
 
           ./Build dist --tar C:\path\to\tar.exe --gzip C:\path\to\zip.exe
 
