--- a/Changes
+++ b/Changes
@@ -1,5 +1,14 @@
 Revision history for Perl extension Module::Build.
 
+0.33 - Sun May  3 20:16:34 PDT 2009
+
+ Bug-fixes:
+ - Fixed RT#45462: Compat.pm needs to reference 'Build.com' on VMS
+   [patch from John Malmberg]
+ - Fixed RT#45461: ext.t on VMS [patch from John Malmberg]
+ - Fixed RT#43861: Module::Build::PPMMaker has broken PPD name
+   versioning for v5.10+
+
 0.32_01 - Tue Apr 14 17:14:22 PDT 2009
 
  Bug-fixes:
